[gd_scene load_steps=3 format=3 uid="uid://c5gcm2l8uew4u"]

[ext_resource type="Script" uid="uid://bh0iq4b3s3xld" path="res://Scripts/DragToPosition.gd" id="1_xs6h4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yn83y"]
size = Vector2(69, 214)

[node name="octopus_costume_limb" type="Area2D"]
script = ExtResource("1_xs6h4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 1.16)
shape = SubResource("RectangleShape2D_yn83y")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
